--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,14 +7,14 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/markdown2sqlite .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/polydata .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/markdown2sqlite
+# docker run -i --rm -p 8080:8080 quarkus/polydata
 #
 ###
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.3
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
 WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
